SVN
-------------------------------

Ant:   Resolved issue CASTOR-1784 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based corrections in anttask
       Details: http://jira.codehaus.org/browse/CASTOR-1784
       (Edward - 20061229)

Version 1.1-M2, Dec 29, 2006
-------------------------------

All:   Resolved issue CASTOR-112 using contribution from Le Duc Bao [leducbao@gmail.com]
       Added generation of SQL scripts from mapping file.
       Details: http://jira.codehaus.org/browse/CASTOR-112
       (Ralf - 20061229)

XML:   Resolved issue CASTOR-1763 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved Ant task definition for XML code generator to separate deployment unit.
       Details: http://jira.codehaus.org/browse/CASTOR-1763
       (Werner - 20061228)

XML:   Resolved issue CASTOR-279 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Source Generator: Multiple pattern strings ignored
       Details: http://jira.codehaus.org/browse/CASTOR-279
       (Edward - 20061228)

XML:   Resolved issue CASTOR-188 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SourceGen: ClassDescriptor.getExtends() returns always null
       Details: http://jira.codehaus.org/browse/CASTOR-188
       (Edward - 20061227)

XML:   Resolved issue CASTOR-1765 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add xml/validators to checkstyle and do checkstyle cleanup.
       Details: http://jira.codehaus.org/browse/CASTOR-1765
       (Edward - 20061225)

XML:   Resolved issue CASTOR-1722 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validating <xsd:IDREF> and <xsd:IDREFS> during (un)marshalling.
       Details: http://jira.codehaus.org/browse/CASTOR-1722
       (Werner - 20061225)

XML:   Resolved issue CASTOR-1764 using contribution from Werner Guttmann [werner.guttmann@gmx.net]